--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,123 +1,36 @@
-body{
-    font-size: 1.2rem;
-    color: #333;
-    margin: 0;
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?kxwqd9');
+  src:  url('fonts/icomoon.eot?kxwqd9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kxwqd9') format('truetype'),
+    url('fonts/icomoon.woff?kxwqd9') format('woff'),
+    url('fonts/icomoon.svg?kxwqd9#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
-.container{
-    width: 85%;
-    max-width: 850px;
-    margin: 0 auto;
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1{
-    font-size: 2rem;
-    line-height: 1.3em;
+.icon-menu:before {
+  content: "\e9bd";
 }
-header a{
-    color: white;
-    text-decoration: none;
+.icon-menu2:before {
+  content: "\e9be";
 }
-
-.header{
-    background: #333;
-    color: white;
-    padding: 2rem 0;
-
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-}
-
-.logo-nav-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.nav ul li{
-    display: inline-block;
-}
-
-.nav ul li a{
-    display: block;
-    padding: 0.5rem  1rem;
-    transition: 0.4s linear;
-    border-radius: 5px;
-    text-decoration: none;
-    color: white;
-}
-
-.nav ul li a:hover{
-    background: #4a4a4a;
-}
-
-.nav ul.show{
-    display: block;
-}
-
-.LOGO{
-    letter-spacing: 15px;
-    font-size: 1.3em;
-}
-
-.main{
-    padding-top: 10rem;
-}
-
-.footer{
-    background: #ccc;
-    padding: 4rem;
-    text-align: center;
-    margin-top: 6rem;
-}   
-
-.menu{
-    display: none;
-}
-
-@media only screen and (max-width: 770px){
-    
-    .menu{
-        display: block;
-        cursor: pointer;
-    }
-    
-    .nav{
-        width: 100%;
-    }
-
-    .nav ul{
-        display: none;
-    }
-
-    .nav ul li{
-        display: block;
-        margin-top: 1rem;
-    }
-    
-    .nav ul li a{
-        display: block;
-        padding: 0.5rem  0;
-        transition: 0.4s linear;
-        border-radius: 5px;
-        text-decoration: none;
-        color: white;
-    }
-    
-    .nav ul li a:hover{
-        background: #4a4a4a;
-    }
-
-}
-@media screen and (max-width: 770px){
-
-
+.icon-menu3:before {
+  content: "\e9bf";
 }
