--- a/AppPetQR/templates/AppPetQR/Movil.html
+++ b/AppPetQR/templates/AppPetQR/Movil.html
@@ -29,7 +29,7 @@
 
     </header>
 
-        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="https://code.jquery.com/jquery-latest.js"></script>
         <script src="{% static 'js/main.js' %}"></script>
 </body>
 
