--- a/static/css/mov.css
+++ b/static/css/mov.css
@@ -49,11 +49,17 @@ header nav ul li a:hover {
 section {
 	padding:20px;
 }
+.container{
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
 
-@media screen and (max-width:800px ) {
+@media screen and (max-width:800px )  {
 	header nav {
 		width:80%;
-		height:100%;
+		height:80%;
 		left:-0;
 		margin:0;
 		position: fixed;
@@ -88,4 +94,12 @@ section {
 		float:right;
 		font-size:40px;
 	}
+	.container{
+		width: 100%;
+		height: 100%;
+		padding: 0;
+		margin: 0;
+		background: red;
+	}
+
 }
