--- a/AppPetQR/templates/AppPetQR/vacunas.html
+++ b/AppPetQR/templates/AppPetQR/vacunas.html
@@ -1,1 +1,44 @@
 {% extends 'Movil.html' %}
+
+{% block contenido %}
+<!-----Vacunas----->
+<table>
+    <tbody>
+        <tr>
+            <td>Nombre:</td>
+            <td>Nicol</td>
+        </tr>
+        <tr>
+            <td>Raza:</td>
+            <td>Mestiza</td>
+        </tr>
+        <tr>
+            <td>Edad:</td>
+            <td>2 años</td>
+        </tr>
+        <tr>
+            <td>Responsable:</td>
+            <td>Luis Gutierrez</td>
+        </tr>
+    </tbody>
+    <img src="static/images/pet.jpg" class="foto">
+ 
+
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% endblock %}
