--- a/AppPetQR/templates/Movil.html
+++ b/AppPetQR/templates/Movil.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="menu_bar">
-            <a href="#" class="bt-menu"><span class="icon-menu"></span>Menu</a>
+            <a href="#" class="bt-menu"><span class="TAP">-></span>Menu</a> 
         </div>
         <nav onload="esconder()">
             <ul>
