--- a/AppPetQR/templates/Movil.html
+++ b/AppPetQR/templates/Movil.html
@@ -19,9 +19,9 @@
         </div>
         <nav onload="esconder()">
             <ul>
-                <li><a href="{% url 'vacuna' %}"><span></span>Vacunas</a></li>
+                <li><a href="{% url 'LVacunas' %}"><span></span>Vacunas</a></li>
                 <li><a href="{% url 'control' %}"><span></span>Control Medico</a></li>
-                <li><a href="{% url 'desparacitacion' %}"><span></span>Desparacitacion</a></li>
+                <li><a href="{% url 'LDesparacitacion' %}"><span></span>Desparacitacion</a></li>
                 <li><a href="{% url 'almacen' %}"><span></span>Almacen</a></li>
                 <li><a href="{% url 'recordatorio' %}"><span></span>Recordatorio</a></li>
             </ul>
