--- a/AppPetQR/templates/Administrador.html
+++ b/AppPetQR/templates/Administrador.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +11,12 @@
     {% block cuerpo %}
 
     {% endblock %}
+
+
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+
 </body>
 </html>
