--- a/AppPetQR/templates/AppPetQR/Register/RegistroUsuario.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroUsuario.html
@@ -1,10 +1,13 @@
 {% extends 'Administrador.html '%}
 
 {% block cuerpo %}
-    <form method="POST">
+    <form method="POST" action="">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Enviar</button>
     </form>
+
+
+
 
 {% endblock %}
