--- a/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
@@ -1,12 +1,24 @@
 {% extends 'Administrador.html '%}
+{% load static %}
 
 {% block cuerpo %}
-    <form method="POST">
+    <form method="POST" action="">
         {% csrf_token %}
         {{ form.as_p }}
-        
-        {{ form2.as_p }}
-        <button type="submit">Enviar</button>
+
+
+
+
+        <button type="submit" >Enviar</button>
     </form>
+
+
+    
+
+    
+    <script src="{% static 'js/RegisterVacunas.js' %}"></script>
+
+  
+
 
 {% endblock %}
