--- a/AppPetQR/templates/Administrador.html
+++ b/AppPetQR/templates/Administrador.html
@@ -5,25 +5,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
+
+    
+    <link rel="stylesheet" href="{% static 'css/BaseAdmin.css' %}">
 </head>
 <body>
+    <div id="Menu"> 
+
+        
+        <div class="row" id="Top">
+            <div class="col-md-4 col-sm-4 col-xl-4" >
+                
+
+            </div>
+            <div class="col-md-6 col-sm-6 col-xl-6" ></div>
+            <div class="col-md-2 col-sm-2 col-xl-2 dropdown" id="Top_Boton" >
+                <a class="btn ColorBoton dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Configuraciòn
+                </a>
+                        
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="#">Configuraciòn</a>
+                        <a class="dropdown-item" href="#">Cerrar Sesion</a>
+                    </div>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="row" id="Center">
+            <div class="col-md-2" id="CenterIzaquierdo">
+                
+                
+                
+               
+                
+        
+                <div class="list-group"  id="CenterBoton">
+                    {% block BtnMenu %}
+
+                    {% endblock %}
+                        
+                </div>
+
+            </div>
+
+
+
+           
+            
+
+            <div class="col-md-10">
+
+                <div class="row">
+                    {% block btnNav %}
+
+                    {% endblock %}
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2">
+
+                    </div>
+                    
+                    <div class="col-md-8">
+                        {% block input %}
+
+                        {% endblock %}
+
+                    </div>
+                   
+
+
+
+                </div>
+
+
+
+            </div>
 
 
 
 
 
-    {% block cuerpo %}
-
-    {% endblock %}
+        </div>
 
 
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
+        
 
+
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
