--- a/AppPetQR/templates/AppPetQR/Register/RegistroUsuario.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroUsuario.html
@@ -1,13 +1,30 @@
 {% extends 'Administrador.html '%}
 
-{% block cuerpo %}
-    <form method="POST" action="">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Enviar</button>
-    </form>
 
 
+
+
+{% block BtnMenu %}
+    <p><a href="#" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
+    <p><a href="#" class="btn ColorBoton list-group-item-action">Mascotas</a></p>
+    <p><a href="#" class="btn ColorBoton list-group-item-action">Desparacitasiones</a></p>
+    <p><a href="#" class="btn ColorBoton list-group-item-action">Controles Medicos</a></p>
 
 
 {% endblock %}
+
+
+
+{% block input %}
+
+    <form method="POST" action="">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+        <button type="submit" class="btn-lg btn-block btn ColorBoton" style="margin-bottom:2em ;" >Enviar</button>
+    </form>
+
+{% endblock %}
+
+
+
