--- a/AppPetQR/templates/AppPetQR/List/MostrarProducto.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarProducto.html
@@ -1,5 +1,4 @@
-{% extends 'Administrador.html '%}
-
+{% extends 'IndexAdmin.html '%}
 
 
 
@@ -23,13 +22,11 @@
     <table class="table table-striped" >
         <thead>
           <tr>
-            <th scope="col">Documento</th>
             <th scope="col">Nombre</th>
-            <th scope="col">Apellido</th>
-            <th scope="col">Fecha Nacimiento</th>
+            <th scope="col">Tipo</th>
+
             
-            <th scope="col"> Contacto</th>
-            <th scope="col"> Mascotas</th>
+            
           </tr>
         </thead>
         <tbody>
@@ -37,20 +34,23 @@
     
           </tr>
           {% for date in form %}
+
+          {% if date.fk_veterinaria == user %}
           <tr>
             
-            <td>{{date.documento}}</td>
             <td>{{date.nombre}}</td>
-            <td>{{date.apellido}}</td>
-            <td>{{date.fechanacimiento}}</td>
-            <td>{{date.celular}}</td>
-            <td><a href="">Registrar Mascota</a></td>
+            <td>{{date.fk_Tipoproducto.nombre }}</td>
+
+          
           </tr>
+          {% endif %}
           {% endfor %}
 
           </tr>
         </tbody>
     </table>
+
+    <p><a href="{% url 'RProducto'  user.id %}">Agregar un nuevo desparasitante</a></p>
 
 
 {% endblock %}
