--- a/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
@@ -1,5 +1,6 @@
-{% extends 'Administrador.html '%}
+{% extends 'indexAdmin.html '%}
 {% load static %}
+
 
 {% block cuerpo %}
     <form method="POST" action="">
