--- a/AppPetQR/templates/AppPetQR/Register/RegistroControlMedico.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroControlMedico.html
@@ -1,17 +1,10 @@
-{% extends 'Administrador.html '%}
+{% extends 'indexAdmin.html '%}
 
 
 
 
 
-{% block BtnMenu %}
-    <p><a href="#" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
-    <p><a href="#" class="btn ColorBoton list-group-item-action">Mascotas</a></p>
-    <p><a href="#" class="btn ColorBoton list-group-item-action">Desparacitasiones</a></p>
-    <p><a href="#" class="btn ColorBoton list-group-item-action">Controles Medicos</a></p>
 
-
-{% endblock %}
 
 
 
