--- a/AppPetQR/templates/Accounts/Login.html
+++ b/AppPetQR/templates/Accounts/Login.html
@@ -1,4 +1,5 @@
-{% block content %}
+{% extends 'principal.html' %}
+{% block principal %}
 
 {% if form.errors %}
 <p>Usuario no encontrado, Intenta nuevamente</p>
