--- a/AppPetQR/templates/AppPetQR/IndexUsuario.html
+++ b/AppPetQR/templates/AppPetQR/IndexUsuario.html
@@ -1,11 +1,51 @@
 {% extends 'Movil.html '%}
-
 {% block Menu %}
+<p><a href="{% url 'LMostrarUsuario'   %}" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
+<p><a href="{% url 'LMostrarVacunas'   %}" class="btn ColorBoton list-group-item-action">Mascotas</a></p>
+<p><a href="{% url 'LMostrarMascotas'   %}" class="btn ColorBoton list-group-item-action">Vacunas</a></p>
+<p><a href="{% url 'LMostrarDesparasitacion'   %}" class="btn ColorBoton list-group-item-action">Desparacitasiones</a></p>
+<p><a href="{% url 'LMostrarControlesMedicos'   %}" class="btn ColorBoton list-group-item-action">Controles Medicos</a></p>
+<p><a href="{% url 'LMostrarProducto'   %}" class="btn ColorBoton list-group-item-action">Productos</a></p>
 
-        <li><a href="{% url 'LVacunas'   %}"><span></span>Vacunas</a></li>
-        <li><a href="{% url 'control' %}"><span></span>Control Medico</a></li>
-        <li><a href="{% url 'desparacitacion' %}"><span></span>Desparacitacion</a></li>
-        <li><a href="{% url 'almacen' %}"><span></span>Almacen</a></li>
-        <li><a href="{% url 'recordatorio' %}"><span></span>Recordatorio</a></li>
+
+{% endblock %}
+
+
+
+
+
+{% block contenido %}
+    <table class="table table-striped" >
+        <thead>
+          <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Fecha Registro</th>
+            <th scope="col">Vacunas</th>
+            <th scope="col">Desparasitantes</th>
+            
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+    
+          </tr>
+          {% for date in form %}
+
+          {% if date.fk_usuario.fk_veterinaria == user %}
+          <tr>
+            
+            <td>{{date.nombre}}</td>
+            <td>{{date.fk_usuario.nombre}}</td>
+            <td>{{date.fecharegistro}}</td>
+
+
+          </tr>
+          {% endif %}
+          {% endfor %}
+
+          </tr>
+        </tbody>
+    </table>
+
 
 {% endblock %}
