--- a/AppPetQR/templates/AppPetQR/List/MostrarDesparasitacion.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarDesparasitacion.html
@@ -15,7 +15,7 @@
             <th scope="col">Responsable</th>
             <th scope="col">Mascota</th>
             <th scope="col">Fecha Registro</th>
-            <th scope="col">Fecha Nacimiento</th>
+            
             
             <th scope="col"> Medicamento</th>
             
@@ -29,11 +29,11 @@
           {% if date.fk_mascota.fk_usuario.fk_veterinaria == user%}
           <tr>
             
-            <td>{{date.fk_mascota.fk_usuariodocumento}}</td>
-            <td>{{date.nombre}}</td>
-            <td>{{date.apellido}}</td>
-            <td>{{date.fechanacimiento}}</td>
-            <td>{{date.celular}}</td>
+            <td>{{date.fk_mascota.fk_usuario.documento}}</td>
+            <td>{{date.fk_mascota.nombre}}</td>
+            <td>{{date.fk_mascota.fecharegistro}}</td>
+            
+            <td>{{date.fk_producto.nombre}}</td>
             
           </tr>
           {% endif %}
@@ -43,7 +43,7 @@
           </tr>
         </tbody>
     </table>
-    <p><a href="{% url 'RDesparacitacion'  user.id %}">Agregar un nuevo desparasitante</a></p>
+    
 
 
 {% endblock %}
