--- a/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
+++ b/AppPetQR/templates/AppPetQR/Register/RegistroVacunas.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-{% block cuerpo %}
+{% block input %}
     <form method="POST" action="">
         {% csrf_token %}
         {{ form.as_p }}
