--- a/AppPetQR/templates/AppPetQR/List/MostrarProducto.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarProducto.html
@@ -35,22 +35,22 @@
           </tr>
           {% for date in form %}
 
-          {% if date.fk_veterinaria == user %}
-          <tr>
+            {% if date.fk_veterinaria == user %}
+            <tr>
 
-            <td>{{date.nombre}}</td>
-            <td>{{date.fk_Tipoproducto.nombre }}</td>
+              <td>{{date.nombre}}</td>
+              <td>{{date.fk_Tipoproducto.nombre }}</td>
 
 
-          </tr>
-          {% endif %}
+            </tr>
+            {% endif %}
           {% endfor %}
 
           </tr>
         </tbody>
     </table>
 
-    <p><a href="{% url 'RProducto'  user.id %}">Agregar un nuevo desparasitante</a></p>
+    <p><a href="{% url 'RProducto'  user.id %}">Agregar un nuevo producto</a></p>
 
 
 {% endblock %}
