--- a/AppPetQR/templates/AppPetQR/indexAdmin.html
+++ b/AppPetQR/templates/AppPetQR/indexAdmin.html
@@ -1,4 +1,11 @@
-{% extends 'Administrador.html'%}
+{% extends 'Administrador.html'%}         
+
+
+{% block User %}
+
+    <label for=""> {{user.username}} </label>
+
+{% endblock %}
 
 
 
