--- a/AppPetQR/templates/Administrador.html
+++ b/AppPetQR/templates/Administrador.html
@@ -21,7 +21,9 @@
                 
 
             </div>
-            <div class="col-md-6 col-sm-6 col-xl-6" ></div>
+            <div class="col-md-6 col-sm-6 col-xl-6" >
+
+            </div>
             <div class="col-md-2 col-sm-2 col-xl-2 dropdown" id="Top_Boton" >
                 <a class="btn ColorBoton dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Configuraciòn
@@ -82,6 +84,8 @@
                         {% endblock %}
 
                     </div>
+
+  
                    
 
 
@@ -104,10 +108,15 @@
 
 
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+   
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+{% block script %}
+
+{% endblock %}
 </body>
 </html>
 
