--- a/AppPetQR/templates/AppPetQR/Movil/List/ListarVacunas.html
+++ b/AppPetQR/templates/AppPetQR/Movil/List/ListarVacunas.html
@@ -25,20 +25,20 @@
             </tr> 
             <tr>
                 <td>Nombre:</td>
-                <td>{{MascotaDate.nombre}}</td>
+                <td>{{VacunaDate.nombre}}</td>
             </tr>
             <tr>
                 <td>Reza:</td>
-                <td>{{MascotaDate.fk_raza.nombre}}</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Edad:</td>
-                <td>2 años</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Responsable:</td>
-                <td>{{MascotaDate.fk_usuario.nombre}}</td>
-                <td>{{MascotaDate.fk_usuario.apellido}}</td>
+                <td></td>
+                <td></td>
             </tr>
 
 
